src/styles/index.css
body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.maincontainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.hero-section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 700px;
  width: 100%;
  animation: var(--fadeIn);
}

.hero-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  text-align: left;
  padding: 20px;
}

.hero-title {
  color: var(--purple);
  font-size: 4.5rem;
  font-family: var(--Inter);
  font-weight: 650;
  max-width: 600px;
}

.hero-description {
  color: var(--secondary-grey);
  font-size: 1.1rem;
  font-family: var(--Inter);
  font-weight: 400;
  letter-spacing: 0.023rem;
  line-height: 1.6em;
  max-width: 600px;
  margin-top: 30px;
}

.featured-projects-section,
.blog-posts-section,
.connect-with-me {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  max-width: 600px;
  animation: var(--fadeIn);
}

.blog-posts-section,
.connect-with-me {
  margin-top: 14rem;
}

.featured-projects,
.blog-posts {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  margin-top: 90px;
  max-width: 655px;
  gap: 10px;
}

.featured-projects-top,
.blog-section-top,
.connect-with-me-top {
  max-width: 600px;
}

.all-projects,
.all-posts {
  text-decoration: none;
}

.featured-projects-title,
.blog-section-title,
.connect-with-me-title {
  color: var(--purple);
  font-size: 2.75rem;
  font-family: var(--Inter);
  font-weight: 650;
  text-align: left;
}

.featured-projects-top p,
.blog-section-top p {
  display: flex;
  align-items: center;
  gap: 5px;
  color: var(--secondary-grey);
  font-size: 16px;
  font-family: var(--Inter);
  font-weight: 400;
  line-height: 1rem;
  letter-spacing: 0.023px;
  text-align: left;
  margin-top: 1.25rem;
  transition: var(--ease-in-out);
}

.featured-projects-top p:hover,
.blog-section-top p:hover {
  color: var(--primary-grey);
}

.project-link,
.post-link {
  text-decoration: none;
}

.project,
.post {
  display: flex;
  justify-content: space-between;
  align-items: center;
  cursor: pointer;
  width: 655px;
  height: 85px;
  gap: 30px;
  border-radius: 1rem;
  padding: 1em 1.75em 1em 1.75em;
  margin-left: -1.75rem;
  transition: var(--ease-in-out);
}

.project:hover,
.post:hover {
  background-color: var(--hover-black);
}

.project-content,
.blog-content {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.project-title,
.post-title {
  color: var(--primary-grey);
  font-size: 1.1rem;
  font-family: var(--Inter);
  font-weight: 450;
  line-height: 1.5em;
}

.project-description,
.published {
  color: var(--secondary-grey);
  font-size: 0.95rem;
  font-family: var(--Inter);
  font-weight: 400;
  line-height: 1.5em;
  letter-spacing: 0.023rem;
}

.learn-more,
.read-more {
  text-align: right;
}

.arrow {
  color: var(--secondary-grey);
  height: 16px;
  width: 16px;
  font-family: var(--Inter);
  font-weight: 650;
  cursor: pointer;
  transition: var(--ease-in-out);
}

.arrow:hover {
  color: var(--primary-grey);
}

.project-hr,
.blog-hr {
  width: 37em;
  border: var(--hr);
}

.connect-with-me-description {
  color: var(--secondary-grey);
  font-size: 1rem;
  font-family: var(--Inter);
  line-height: 1.6em;
  letter-spacing: 0.023rem;
  margin-top: 1rem;
  width: 600px;
}

.social-media-links {
  display: flex;
  align-items: center;
  gap: 0.9375rem;
  margin: 2.75em 0 0.5em 0;
  width: 600px;
}

.github svg,
.codepen svg,
.linkedin svg,
.email svg {
  cursor: pointer;
  transition: var(--ease-in-out);
}

.github svg:hover,
.codepen svg:hover,
.linkedin svg:hover,
.email svg:hover {
  stroke: var(--purple);
}

.email-copy {
  width: 600px;
}

.copy-email {
  display: flex;
  align-items: center;
  gap: 7px;
  height: 22px;
  border: none;
  cursor: pointer;
  text-align: left;
  background-color: transparent;
}

.copy-email {
  color: var(--secondary-grey);
  font-size: 0.9375rem;
  font-family: var(--Inter);
  font-weight: 400;
  letter-spacing: 0.023rem;
  transition: var(--ease-in-out);
}

.copy-email:hover {
  color: var(--primary-grey);
}

.copied-message {
  display: none;
  color: var(--primary-grey);
  font-size: 0.9375rem;
  font-family: var(--Inter);
  font-weight: 400;
  width: 600px;
  position: fixed;
  margin-top: 150px;
  margin-left: 400px;
  animation: fadeOut 3s;
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

